apps/home-assistant/service.yaml
# yaml-language-server: $schema=https://github.com/yannh/kubernetes-json-schema/raw/refs/heads/master/v1.33.0/service-v1.json
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-service
  namespace: home-assistant
spec:
  ports:
    - name: http
      port: 8123
  selector:
    app: home-assistant
